--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,3 +1,17 @@
 .header {
     background-color: lumx-color-variant('primary', 'N');
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 15px;
+
+    .logo {
+        height: 60px;
+    }
+    
+    @media (min-width: 48em) {
+        flex-direction: row;
+    }
 }
