🐛 add missing stylesheet

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,9 @@ code {
 }
 
 @import './App/App.scss';
+@import './components/Alert/index.scss';
 @import './components/Header/index.scss';
 @import './components/CharacterBanner/index.scss';
+@import './components/CircularLoader/index.scss';
 @import './components/Pagination/index.scss';
 @import './components/Search/index.scss';
